--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Top Song Game Demo</title>
+	<title>Sandy Road</title>
 	<link rel="stylesheet" type="text/css" href="./Resources/css/style.css">
 </head>
 
 <body>
-	<div class="game_wrapper" style="background-image: url(./resources/media/images/index_bg.jpg); background-size: cover; background-position: center;">
+	<div class="game_wrapper" style="background-image: url(./Resources/media/images/desert.png); background-size: cover; background-position: center;">
 
 		<div class="title">
-			<h1>Which song has been played more on Spotify?</h1>
+			<h1>Welcome to Sandy Road! You will be playing as this camel<br>You have gotten lost trying to find your way back home<br>Your goal is to find your way back home without dying from dehydration or overheating. Good luck! It'll be a breeze....</h1>
 		</div>
 
 		<div class="button">
+			<a href="question.html"><button class="clickable_button">Play!</button></a>
 			<a href="question.html"><button class="clickable_button">Play!</button></a>
 		</div>
 		
